--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ a {
     margin-left:3%;
     width:1440px;
     height:717px;
-    background-image: url("/img/Vbackground.png");
+    background-image: url("./img/Vbackground.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -187,3 +187,4 @@ a {
     font-size:15px;
     border:0px;
 }
+
